--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 InlineStrings = "842dd82b-1e85-43dc-bf29-5d0ee9dffc48"
+Intervals = "d8418881-c3e1-53bb-8760-2df7ec849ed5"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
